--- a/fallecidos_final.html
+++ b/fallecidos_final.html
@@ -15,7 +15,7 @@
    <div class="CONTENEDOR_ICONOS_HOSPITALIZADOS"> 
   <a href="index.html"><img  src="imagenes/Imagen_39.png"></a>
   <a href="fallecidos_final.html"><img  src="imagenes/Imagen_7.png"></a>
-  <a href="HOSPITALIZADOS.html"><img  src="imagenes/Imagen_36.png"></a>
+  <a href="hospitalizados.html"><img  src="imagenes/Imagen_36.png"></a>
   <a href="positivo_final.html"><img  src="imagenes/Imagen_37.png"></a>
   <a href="recuperado.html"><img  src="imagenes/Imagen_10.png"></a><BR><br>
   <TABLE >
