--- a/nosotros.html
+++ b/nosotros.html
@@ -5,12 +5,12 @@
    
    <div class="ENCABEZADO"> 
   <a><img src="imagenes/Imagen_1.png"></a>
-  <div class="TITULO">INFORMACI”N Y GR¡FICOS PRECTIVOS DEL COVID-19 EN EL PER⁄</div></div>
+  <div class="TITULO">INFORMACI√ìN Y GR√ÅFICOS PRECTIVOS DEL COVID-19 EN EL PER√ö</div></div>
     
    <div class="CONTENEDOR_ICONOS_HOSPITALIZADOS"> 
   <a href="index.html"><img  src="imagenes/Imagen_39.png"></a>
   <a href="fallecidos_final.html"><img  src="imagenes/Imagen_7.png"></a>
-  <a href="HOSPITALIZADOS.html"><img  src="imagenes/Imagen_36.png"></a>
+  <a href="hospitalizados.html"><img  src="imagenes/Imagen_36.png"></a>
   <a href="positivo_final.html"><img  src="imagenes/Imagen_37.png"></a>
   <a href="recuperado.html"><img  src="imagenes/Imagen_10.png"></a><BR><br>
   <TABLE >
@@ -25,7 +25,7 @@
   </div>
   <br><br><br>
   <div class="CONTENEDOR_SOMOS"> 
-  <b>øQUIENES SOMOS?<BR><BR>Este proyecto fue realizado por un equipo de alumnos de la Universidad Nacional Federico Villareal, que con el uso de la metodologia de ciencia de datos, se pretende presentar un proyecto que analice el avance del Covid-19 en el Per˙ y consecuentemente realizar un analisis predictivo de las distintas graficas como Positivos,Fallecidos,Hospitalizados y Recuperados, mediante una metodologia ARIMA que nos permite analizar los patrones y tendencias de los graficos, todo con el fin de poder brindar una informacion clara sobre el avance de esta pandemia sobre el pais y que expertos en distintos campos utilicen esta informacion de manera conveniente.</b>
+  <b>¬øQUIENES SOMOS?<BR><BR>Este proyecto fue realizado por un equipo de alumnos de la Universidad Nacional Federico Villareal, que con el uso de la metodologia de ciencia de datos, se pretende presentar un proyecto que analice el avance del Covid-19 en el Per√∫ y consecuentemente realizar un analisis predictivo de las distintas graficas como Positivos,Fallecidos,Hospitalizados y Recuperados, mediante una metodologia ARIMA que nos permite analizar los patrones y tendencias de los graficos, todo con el fin de poder brindar una informacion clara sobre el avance de esta pandemia sobre el pais y que expertos en distintos campos utilicen esta informacion de manera conveniente.</b>
 <img src="imagenes/Imagen_43.png">
   </div>
   
@@ -37,13 +37,13 @@
  <img src="imagenes/Imagen_30.png">
   <div class="PIE_NOSOTROS">
     INFORMATE MAS<BR>
-    <a href="nosotros.html">øQuiÈnes somos?<br>Finalidad de la p·gina<br><br><br></a>
+    <a href="nosotros.html">¬øQui√©nes somos?<br>Finalidad de la p√°gina<br><br><br></a>
     DATOS SACADOS DE:<br>
     <a href="https://www.minsa.gob.pe/datosabiertos/" target="_blank">MINSA<br></a>
     <a href="https://www.minsa.gob.pe/datosabiertos/?op=22#" target="_blank">SINADEF</a>
   </div>
   <div class="PIE_UNIVERSIDAD">
-    <P>FACULTAD DE INGENIERÕA INDUSTRIAL Y DE SISTEMAS (FIIS)<br>
+    <P>FACULTAD DE INGENIER√çA INDUSTRIAL Y DE SISTEMAS (FIIS)<br>
 15082, Av. Oscar R. Benavides 450, Cercado 
 de Lima 15082<br>
 (01) 4811424</P>
